# hannahanna

./: .hannahanna.yml  AUDIT_REPORT.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE  NEXT_PHASE_PROMPT.md  PHASE3_PROMPT.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.3.md  RELEASE_NOTES_v0.5.md  RELEASE_NOTES_v0.6.md  SECURITY.md  V0.1.0_RELEASE_CHECKLIST.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
docs/: MIGRATING.md  examples.md  templates.md
scripts/: install-git-hooks.sh
scripts/git-hooks/: pre-commit  pre-push
spec/: plan.md  spec.md  v0.4.md  v0.5.md  v0.6.md  vision.md
src/: clock.rs  config.rs  errors.rs  fuzzy.rs  hooks.rs  lib.rs  main.rs  monitoring.rs  snapshot.rs  state.rs  suggestions.rs  tags.rs  templates.rs
src/cli/: activity.rs  add.rs  completions.rs  config_cmd.rs  docker.rs  each.rs  info.rs  init_shell.rs  integrate.rs  list.rs  mod.rs  monitor.rs  ports.rs  prune.rs  remove.rs  return_cmd.rs  setup.rs  snapshot.rs  state.rs  stats.rs  switch.rs  sync.rs  tag.rs  templates.rs  workspace.rs
src/docker/: compose.rs  container.rs  mod.rs  ports.rs
src/env/: compatibility.rs  copy.rs  mod.rs  symlinks.rs  validation.rs
src/vcs/: backend_init.rs  cache.rs  git.rs  jujutsu.rs  mercurial.rs  mod.rs  traits.rs
tests/: aliases.rs  basic_worktree.rs  config_hierarchy.rs  docker_comprehensive.rs  docker_integration.rs  each_command.rs  environment.rs  fuzzy_matching.rs  hooks.rs  hooks_comprehensive.rs  integrate_sync.rs  multi_vcs.rs  return_workflow.rs  scenarios.rs  snapshot_safety.rs  sparse_checkout.rs  template_files.rs  templates.rs  workspace_management.rs  worktree_lifecycle.rs
tests/common/: mod.rs
tests/integration/: docker_compose.rs  docker_lifecycle.rs  parent_child_lifecycle.rs  port_allocation.rs  scenarios_full_lifecycle.rs
