[package]
name = "hannahanna"
version = "0.4.0"
edition = "2021"
authors = ["hannahanna contributors"]
description = "Multi-VCS worktree manager with comprehensive hooks, state management, and docker integration"
license = "MIT OR Apache-2.0"

[[bin]]
name = "hn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
git2 = "0.18"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
sha2 = "0.10"
fs2 = "0.4"
colored = "2.1"
tempfile = "3.8"
regex = "1.10"
chrono = "0.4"
dirs = "5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serial_test = "3.0"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
