[package]
name = "hannahanna"
version = "0.6.0"
edition = "2025"
authors = ["code@rajats.site"]
description = "worktree wrapper for parallelized local development",
license = "MIT"
repository = "https://github.com/rajatscode/hannahanna"
readme = "README.md"
homepage = "https://github.com/rajatscode/hannahanna"
documentation = "https://docs.rs/hannahanna"
keywords = ["git", "worktree", "vcs", "development", "workflow"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.84"
exclude = [
    ".github/",
    "tests/",
    "*.md",
    ".gitignore",
    "spec/",
]

[[bin]]
name = "hn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
git2 = "0.18"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
sha2 = "0.10"
fs2 = "0.4"
colored = "2.1"
tempfile = "3.8"
regex = "1.10"
chrono = "0.4"
dirs = "5.0"
dialoguer = "0.11"
flate2 = "1.0"
tar = "0.4"
version-compare = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serial_test = "3.0"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
